Make admin account optional and fix town fetching in geocoding step
- Made admin account setup optional in setup wizard
- Admin password only required when authentication is enabled
- Improved error handling in API calls with better error messages
- Enhanced town fetching with multiple query formats and better logging
- Added AbortController for proper timeout handling in Nominatim requests
- Improved filtering to exclude county names from town results

--- a/public/setup/index.html
+++ b/public/setup/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <!-- Completion Screen -->
-    <div id="complete-screen" class="screen">
+    <div id="complete-screen" class="screen" style="display: none;">
       <div class="complete-content">
         <div class="success-icon">✓</div>
         <h1>Setup Complete!</h1>
