Update public files, setup, and add diagnostics helper

--- a/public/index.html
+++ b/public/index.html
@@ -483,6 +483,8 @@
           <a href="#" id="view-users-btn">View Users</a>
           <a href="#" id="manage-sessions-btn">Manage Sessions</a>
           <a href="#" id="call-purge-btn">Call Purge</a>
+          <hr style="margin: 8px 0; border: none; border-top: 1px solid var(--border);">
+          <a href="#" id="diagnostics-btn">📋 Copy Diagnostics</a>
         </div>
       </div>
     </div>
